k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: micro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - micro.mostafa.com
      secretName: my-tls-secret
  ingressClassName: nginx
  rules:
    - host: micro.mostafa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micro-service
                port:
                  number: 5000
